# aoc-2019

./: .gitignore  Cargo.toml  README.md  build.zig
.github/workflows/: rust.yml  zig.yml
day01/: Cargo.toml
day01/src/: main.rs  solution.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs  solution.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: compress.rs  grid.rs  main.rs
day18/: Cargo.toml  day18.md
day18/src/: bitset.rs  graph.rs  grid.rs  main.rs  part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs  maze.rs
day21/: Cargo.toml
day21/src/: main.rs  solution.rs  springscript.rs
day22/src/: deck.zig  instruction.zig  main.zig  parser.zig  polynomial.zig  solve.zig
day23/: README.md
day23/src/: main.zig  solve.zig
day24/: README.md
day24/src/: grid.zig  main.zig  parser.zig  solve.zig
day25/: README.md  spaceship.md
day25/src/: main.zig  solve.zig
share/rust/: Cargo.toml
share/rust/src/: intcode.rs
share/zig/: combination.zig  intcode.zig  intcode_test.zig  numtheory.zig
