[workspace]
members = [
  "day01",
  "day02",
  "day03",
  "day04",
  "day05",
  "day06",
  "day07",
  "day08",
  "day09",
  "day10",
  "day11",
  "day12",
  "day13",
  "day14",
  "day15",
  "day16",
  "day17",
  "day18",
  "day19",
  "day20",
  "day21",
  # marker
]

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
#opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
# for profiling
# debug = 1
