[package]
name = "day10"
version = "0.1.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
edition = "2018"

[[bin]]
name = "day10"
path = "src/main.rs"

[dependencies]
log = {version = "0.4.0", features = ["max_level_debug", "release_max_level_warn"]}
env_logger = "0.8.2"
num-rational = "0.4.0"
