[package]
name = "day15"
version = "0.1.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
edition = "2018"

[[bin]]
name = "day15"
path = "src/main.rs"

[dependencies]
log = {version = "0.4.0", features = ["max_level_debug", "release_max_level_warn"]}
env_logger = "0.10"
im-rc = "15.0.0"
aoc2019 = { path = "../share/rust" }
