[package]
name = "day18"
version = "0.1.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
edition = "2018"

[[bin]]
name = "day18"
path = "src/main.rs"

[dependencies]
log = {version = "0.4.0", features = ["max_level_debug", "release_max_level_warn"]}
env_logger = "0.8.2"
aoc2019 = { path = "../share/rust" }
bitset-core = "0.1.1"
